Configuração de CORS, adaptações para o front-end

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,2 +1,6 @@
 spring.application.name=jogos-internos
 spring.profiles.active=${APP_PROFILE:dev}
+
+
+spring.web.cors.allowed-origins=http://192.168.3.119:64770
+spring.web.cors.allowed-methods=GET,POST,PUT,DELETE,OPTIONS
